--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,12 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    // https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
+    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.6.0'
+    // https://mvnrepository.com/artifact/org.apache.kafka/kafka
+    compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.6.0'
+    // https://mvnrepository.com/artifact/org.squirrelframework/squirrel-foundation
+    compile group: 'org.squirrelframework', name: 'squirrel-foundation', version: '0.3.8'
 
 
 }
